--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,21 @@
 
 body{
     font-size: 16pt;
-    margin: 0;
+    margin: 0;    
     box-sizing: border-box;
 }
-
+body html{
+    margin: 0;
+    padding: 0;
+}
 /*  back ground image*/
 body{
     background-image: url("../img/back.jpg");
 	background-repeat: no-repeat;
-	background-size: cover;		
+    background-size: cover;
+    background-position: center center;
+    height: 100vh;
+    width: 100%;		
 }
 header nav ul {
     list-style : none;
