--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 /* nav bar style */
 body{
     font-size: 16pt;
-    margin: 0;    
+    margin: 0;
+    padding: 0;   
     box-sizing: border-box;
 }
 body html{
     margin: 0;
     padding: 0;
 }
+
 
 header nav ul {
     list-style : none;
