--- a/css/product.css
+++ b/css/product.css
@@ -12,7 +12,7 @@
     
     border: 1px solid red;
 }
-
+/*
 .grid1-1{
     background-image: url('../img/logo.jpg');
     background-size: cover;
@@ -27,6 +27,7 @@
     background-repeat: no-repeat;
     background-position: center;
 }
+*/
 
 
 .grid1 div img{
